# triathlon_calculator

./: .gitignore  LICENSE  README.md  calculator.py  main..py  main.py  main2.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: actions.yml  test.yml
src/sports/: __init__.py  cycling.py  run.py  swim.py  swim_copy_2.py  swim_event.py
src/sports/cycling/: cycling.py
src/sports/swimming/: CloseWindowButton.py  EntryLabel.py  WidgetsSwim.py  menu_labels.py  swim_calculator.py  widgets.py
src/utils/: CloseWindowButton.py  EntryGap.py  ResultGap.py  close_window.py  close_window_button.py  entry_gaps.py  entry_labels.py  menu_labels.py  triathlon_distance_buttons.py  widgets.py
tests/: test_swimming.py
