[tool.poetry]
name = "triathlon-calculator"
version = "1.0.0"
description = "Triathlon calculator for swim, bike and run pace."
authors = ["Alex Algarate <alex.algarate@gmail.com>"]
readme = "README.md"
packages = [{include = "triathlon_calculator"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "23.3.0"
click = "8.1.3"
colorama = "0.4.6"
flake8 = "6.0.0"
linecache2 = "1.0.0"
mccabe = "0.7.0"
mypy-extensions = "1.0.0"
packaging = "23.1"
pathspec = "0.11.1"
platformdirs = "3.5.1"
pycodestyle = "2.10.0"
pyflakes = "3.0.1"
ruff = "0.0.269"
six = "1.16.0"
traceback2 = "1.4.0"
unittest2 = "1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
exclude = '''
/(
  \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
| node_modules
)/
'''
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
skip = [".gitignore", ".dockerignore"]